--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.186",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.1.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
