feat: 도커 너무 어려워요

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,29 @@
-version: "3"
-
+version: '3'
 services:
+  mdict:
+    build:
+      context: ..
+#    deploy:
+#      replicas: $TOTAL_REPLICAS
+    depends_on:
+      - db
+#      - redis
+#      - bridge
+#      - proxy
+#    volumes:
+#      - /run/docker.sock:/run/docker.sock:ro
+#      - ../config.deploy.json:/app/config.json:ro
+#      - ./logs:/app/logs:rw
+    restart: unless-stopped
+    command: yarn prod
+
   db:
     image: mongo
     volumes:
-      - mongo-data:/data/db
+      - mongo:/data/db
     ports:
-      - "127.0.0.1:27017:27017"
+      - "127.0.0.1:27018:27017"
+    restart: unless-stopped
 
 volumes:
-  mongo-data:
+  mongo:
