fix: 점 하나의 나비효과

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   mdictionary:
     build:
-      context: ..
+      context: .
 #    deploy:
 #      replicas: $TOTAL_REPLICAS
     depends_on:
