--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "devDependencies": {
     "prettier": "^2.7.1"
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@3.2.4",
+  "dependencies": {
+    "@types/xml2js": "^0.4.11",
+    "xml2js": "^0.4.23"
+  }
 }
