feat: 철도 데이터 변환 실행 스크립트 추가

--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "build": "tsc",
     "prod": "node dist",
     "urimalsam": "ts-node src/script/convert",
-    "food": "ts-node src/script/foodSafetyKorea"
+    "food": "ts-node src/script/foodSafetyKorea",
+    "kric": "ts-node src/script/kric"
   }
 }
