feat: kobis 영화정보 컨버팅 스크립트 추가

--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "prod": "node dist",
     "urimalsam": "ts-node src/script/convert",
     "food": "ts-node src/script/foodSafetyKorea",
-    "kric": "ts-node src/script/kric"
+    "kric": "ts-node src/script/kric",
+    "kobis": "ts-node src/script/kobis"
   }
 }
