--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.186",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
+    "lodash": "^4.17.21",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
     "node-xlsx": "^0.21.0",
@@ -30,6 +32,7 @@
     "food": "ts-node src/script/foodSafetyKorea",
     "kric": "ts-node src/script/kric",
     "kobis": "ts-node src/script/kobis",
-    "kind": "ts-node src/script/kind"
+    "kind": "ts-node src/script/kind",
+    "wikipedia": "ts-node src/script/wikipedia"
   }
 }
