refactor: migrate to pnpm

--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
-  "name": "muDictionary",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "mu-dictionary",
   "license": "MIT",
-  "devDependencies": {
-    "prettier": "^2.7.1"
-  },
-  "packageManager": "yarn@3.2.4",
-  "dependencies": {
-    "@types/xml2js": "^0.4.11",
-    "xml2js": "^0.4.23"
+  "packageManager": "pnpm@9.3.0",
+  "scripts": {
+    "dev": "pnpm run -rp dev"
   }
 }
