--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,8 @@
 {
   "name": "client",
   "private": true,
+  "main": "index.js",
+  "license": "MIT",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -23,10 +25,8 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "prettier": "^3.3.2",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
-  },
-  "main": "index.js",
-  "license": "MIT",
-  "packageManager": "yarn@3.2.4"
+  }
 }
