--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,5 @@
 {
   "name": "server",
-  "packageManager": "yarn@3.2.4",
   "devDependencies": {
     "@koa/cors": "^4.0.0",
     "@types/koa": "^2.13.5",
@@ -8,6 +7,7 @@
     "@types/koa-router": "^7.4.4",
     "@types/koa-static": "^4.0.2",
     "@types/koa__cors": "^3.3.0",
+    "prettier": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
