--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "license": "MIT",
   "packageManager": "pnpm@9.3.0",
   "scripts": {
-    "dev": "pnpm run -rp dev"
+    "dev": "pnpm run -rp dev",
+    "build": "pnpm run -rp build"
   }
 }
