refactor: too many things to writez

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 meilisearch:
-  api_url: meilisearch:7700
-#  api_key: 'MEILISEARCH_API_KEY'
+  api_url: http://meilisearch:7700
+  api_key: 'MEILISEARCH_API_KEY'
   insert_size: 1000
   insert_interval : 10
 
@@ -13,7 +13,10 @@ source:
   password: paring
 
 sync:
-  - table: words
-    index: words
+  - table: word
+    index: word
     pk: id
     full: true
+
+progress:
+  type: file
