--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/theme-tools": "^2.1.2",
+    "@choc-ui/chakra-autocomplete": "^5.5.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@types/lodash": "^4.14.186",
@@ -24,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.4.2",
+    "react-virtuoso": "^4.7.11",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
