--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,14 +5,19 @@
   "main": "index.js",
   "scripts": {
     "grac": "bun run src/grac3/index.ts",
-    "genshin": "bun run src/genshin/index.ts"
+    "genshin": "bun run src/genshin/index.ts",
+    "opendict": "bun run src/opendict/index.ts",
+    "sync": "bun run src/sync/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
-    "knex": "^3.1.0"
+    "dotenv": "^16.4.5",
+    "fast-xml-parser": "^4.4.0",
+    "knex": "^3.1.0",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "@types/bun": "^1.1.4"
