--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -9,9 +9,9 @@
     "allowJs": true,
 
     // Bundler mode
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
+    "moduleResolution": "node",
+//    "allowImportingTsExtensions": true,
+//    "verbatimModuleSyntax": true,
     "noEmit": true,
 
     // Best practices
