--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,9 +29,11 @@
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/lodash": "^4.14.186",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "lodash": "^4.17.21",
     "meilisearch": "^0.40.0",
     "nestjs-meilisearch": "^2.1.6",
     "pg": "^8.12.0",
