--- a/scripts/package.json
+++ b/scripts/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.5",
     "es-hangul": "^1.3.5",
     "fast-xml-parser": "^4.4.0",
+    "hypua": "^1.0.3",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "pg": "^8.12.0",
