--- a/scripts/package.json
+++ b/scripts/package.json
@@ -13,7 +13,8 @@
     "laftel": "bun run src/laftel/index.ts",
     "foodsafetykorea": "bun run src/foodsafetykorea/index.ts",
     "stardew-valley": "bun run src/stardew-valley/index.ts",
-    "lobotomy-corp": "bun run src/lobotomy-corp/index.ts"
+    "lobotomy-corp": "bun run src/lobotomy-corp/index.ts",
+    "kric-station": "bun run src/kric-station/index.ts"
   },
   "keywords": [],
   "author": "",
