--- a/scripts/package.json
+++ b/scripts/package.json
@@ -16,7 +16,7 @@
     "lobotomy-corp": "bun run src/lobotomy-corp/index.ts",
     "kric-station": "bun run src/kric-station/index.ts",
     "kind": "bun run src/kind/index.ts",
-    "tj": "bun run src/tj-music/index.ts",
+    "tj": "bun run src/tj-music/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,7 @@
     "dotenv": "^16.4.5",
     "es-hangul": "^1.3.5",
     "fast-xml-parser": "^4.4.0",
+    "hangul-js": "^0.2.6",
     "hypua": "^1.0.3",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
