--- a/scripts/package.json
+++ b/scripts/package.json
@@ -18,7 +18,8 @@
     "kric-station": "bun run src/kric-station/index.ts",
     "kind": "bun run src/kind/index.ts",
     "tj": "bun run src/tj-music/index.ts",
-    "format-foreign": "bun run src/utils/foreignFormat.ts"
+    "format-foreign": "bun run src/utils/foreignFormat.ts",
+    "steam": "bun run src/steam/index.ts"
   },
   "keywords": [],
   "author": "",
