feat: 이것저것 추가

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "hangul-js": "^0.2.6",
     "lodash": "^4.17.21",
     "meilisearch": "^0.40.0",
     "nestjs-meilisearch": "^2.1.6",
