--- a/scripts/package.json
+++ b/scripts/package.json
@@ -7,8 +7,7 @@
     "sync": "bun run src/sync/index.ts",
     "kobis": "bun run src/kobis/index.ts",
     "grac": "bun run src/grac3/index.ts",
-    "genshin": "bun run src/genshin/index.ts",
-    "genshin2": "bun run src/honeyimpact/index.ts",
+    "genshin": "bun run src/honeyimpact/index.ts",
     "opendict": "bun run src/opendict/index.ts",
     "minecraft": "bun run src/minecraft/index.ts",
     "laftel": "bun run src/laftel/index.ts",
