--- a/scripts/.gitignore
+++ b/scripts/.gitignore
@@ -1,6 +1,7 @@
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 data
 data/*.json
+cache/*.json
 foreign_replace_backup.json
 
 # Logs
