--- a/scripts/package.json
+++ b/scripts/package.json
@@ -42,7 +42,8 @@
     "pg": "^8.12.0",
     "read-excel-file": "^5.8.1",
     "xlsx": "^0.18.5",
-    "yaml": "^2.4.5"
+    "yaml": "^2.4.5",
+    "mudict-api-types": "file:../packages/mudict-api-types"
   },
   "devDependencies": {
     "@types/bun": "^1.1.4"
