--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,17 @@ services:
       - "127.0.0.1:5222:3000"
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: server.Dockerfile
     depends_on:
       - db
+    restart: always
+
+  mudict-client:
+    ports:
+      - "127.0.0.1:5223:3000"
+    build:
+      context: .
+      dockerfile: client.Dockerfile
     restart: always
 
   db:
