--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,40 +1,42 @@
 {
-  "name": "client",
+  "name": "client-new",
+  "version": "0.1.0",
   "private": true,
-  "main": "index.js",
-  "license": "MIT",
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "next dev --port 5173",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/theme-tools": "^2.1.2",
     "@choc-ui/chakra-autocomplete": "^5.5.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@tanstack/react-query": "^5.51.1",
+    "@tanstack/react-query-devtools": "^5.51.1",
     "@types/lodash": "^4.14.186",
-    "@types/styled-components": "^5.1.26",
     "axios": "^1.1.2",
+    "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.10",
     "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "mudict-api-types": "workspace:^",
+    "next": "14.2.5",
+    "next-nprogress-bar": "^2.3.12",
+    "react": "^18",
+    "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.4.2",
     "react-virtuoso": "^4.7.11",
-    "styled-components": "^5.3.6",
-    "mudict-api-types": "workspace:^"
+    "use-debounce": "^10.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "prettier": "^3.3.2",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "typescript": "^5"
   }
 }
