chore: root env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,15 @@ services:
       dockerfile: server.Dockerfile
     depends_on:
       - db
+    env_file:
+      - .env
     restart: always
 
   mudict-client:
     ports:
       - "127.0.0.1:2462:3000"
+    env_file:
+      - .env
     build:
       context: .
       dockerfile: client.Dockerfile
