feat: 지도 기능 추가

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-# for Server
+# Production 환경에서 사용할 환경변수를 정의합니다.
+
+# NEXTJS CLIENT OPTION
 MUDICT_API_ENDPOINT=https://dict.kimustory.net/api
-
-# for Client
 NEXT_PUBLIC_MUDICT_API_ENDPOINT=https://dict.kimustory.net/api
+NEXT_PUBLIC_KAKAO_APP_KEY=KAKAO_APP_KEY
 
+# NEST API SERVER OPTION
 DATABASE_URL=postgresql://postgres:paring@db:5432/mudict
 MEILI_HOST=http://meilisearch:7700
 MEILI_API_KEY=masterKey
