--- a/packages/client/.env.example
+++ b/packages/client/.env.example
@@ -3,3 +3,4 @@ MUDICT_API_ENDPOINT=mudict:3000/api
 
 # for Client
 NEXT_PUBLIC_CLIENT_API_ENDPOINT=https://dict.kimustory.net/api
+NEXT_PUBLIC_KAKAO_APP_KEY=YOUR_KAKAO_APP_KEY
