--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-virtuoso": "^4.7.11",
     "use-debounce": "^10.0.1"
   },
